updated files as on 17/3/24

--- a/Module_2/Lab 2.1/src/index.html
+++ b/Module_2/Lab 2.1/src/index.html
@@ -82,15 +82,15 @@
       <h2>HTML elements - img, video, audio</h2>
 
       <img src="https://picsum.photos/400/400" alt="This is an image" width="300" height="300">
-      <img src="/assets/html_lab_image.jpg" alt="This is an HTML Lab image" width="300" height="300"> <!-- Help -->
+      <img src="./assets/html_lab_image.jpg" alt="This is an HTML Lab image" width="300" height="300"> <!-- Help -->
 
-      <video width="250" autoplay> <!--Help. video does not play and autoplay does not work-->
-        <source src="/assets/flower.webm" type="video/webm">
+      <video width="250" controls autoplay> <!--Help. video does not play and autoplay does not work-->
+        <source src="./assets/flower.webm" type="video/webm">
         Sorry, your browser doesn't support embedded videos.
       </video>
     
     <figure>
-      <audio controls src="/assets/t-rex-roar.mp3"> <!--Help. audio does not play, figure and figcaption attribute, autoplay-->
+      <audio controls src="./assets/t-rex-roar.mp3"> <!--Help. audio does not play, figure and figcaption attribute, autoplay-->
       <figcaption>Fig.1 audio lab 1</figcaption>
         Your browser does not support the <code>audio</code> element.
       </audio>
@@ -101,7 +101,7 @@
       <nav>
         <!-- works like <a href="/index.html">Home</a> -->
         <a href="/">Home</a>
-        <a href="http://127.0.0.1:5500/Module_2/Lab%202.1/src/form.html">Link to the Home Page</a>
+        <a href="http://127.0.0.1:5500/Module_2/Lab%202.1/src/form.html">Link to the Form Page</a>
       </nav>
     </header>
 
