Final Module 2 Lab

--- a/Module_2/Lab 2.4/Resume.html
+++ b/Module_2/Lab 2.4/Resume.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
         <header>
-            <img src="./Module_2/Lab 2.4/science-lab-chemicals-14262437.png" alt="This is a Laboratory image"> 
+            <img src="./science-lab-chemicals-14262437.png" id="picture" alt="This is a Laboratory image"> 
             <address>
             <h1>Rahul Pala</h1>
             <p>100 Park Road, Football Street, Auckland, New Zealand</p>
