updated javascript intermediate

--- a/Module_4/cards.html
+++ b/Module_4/cards.html
@@ -61,7 +61,7 @@ const data = [{name: 'bob', age: 23},
 
 
 
-data.forEach(item =>addcard(item.name,item.age));
+data.forEach(item =>addCard(item.name,item.age));
 
 </script>
 
