--- a/MiniProject_1/Landingpage.html
+++ b/MiniProject_1/Landingpage.html
@@ -56,7 +56,7 @@
       </div>
     </div>
   </nav>
-<img src="./GelatoGalore.png.jpg" alt="Gelato Picture">
+<img src="./GelatoGalore.png.jpg" alt="Gelato Picture" class="landingimage">
 <footer>
   <div class="content">
     <p class="sentencefooter">WE SPECIALISE IN CREATIVE GELATO</p>
