--- a/MiniProject_1/GelateriaMenu.html
+++ b/MiniProject_1/GelateriaMenu.html
@@ -54,7 +54,7 @@
       </div>
     </div>
   </nav>
-  <img style="opacity: 0.7;" src="./Gelatomenu.png.jpg" alt="Gelato picture" height="70%" width="100%">
+  <img src="./Gelatomenu.png.jpg" class="landingimage" alt="Gelato picture">
   <h3 style="text-align: center;">PRICE <span class="icon-park--icecream-two"></span></p></h3>
   <div class="container">
     <div class="box">Single scoop - $6.00</div>
@@ -70,12 +70,15 @@
    <template id="card-template" >
     <div class="card">
      <div class="card-body" >
+      <img class="card-image" height="200">
       <div class="card-title" ></div>
       <div class="card-text"></div>
      </div>
     </div>
    </template >
-      <div id="card-list" ></div>
+   <div class="container">
+    <div class="row row-cols-1 row-cols-lg-3" id="card-list"></div>
+  </div>
   
       <footer>
         <div class="content">
