--- a/MiniProject_1/GelateriaMenu.html
+++ b/MiniProject_1/GelateriaMenu.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gelateria Menu page</title>
+    <link rel="icon" type="image/x-icon" href="./assets/image12.jpg">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    <style>
    </style>
@@ -54,7 +56,6 @@
       </div>
     </div>
   </nav>
-  <img src="./Gelatomenu.png.jpg" class="landingimage" alt="Gelato picture">
   <h3 style="text-align: center;">PRICE <span class="icon-park--icecream-two"></span></p></h3>
   <div class="container">
     <div class="box">Single scoop - $6.00</div>
